feat: Initial improvements

--- a/input.conf
+++ b/input.conf
@@ -1,1 +1,9 @@
+WHEEL_UP      add volume 2
+WHEEL_DOWN    add volume -2
+UP    add volume 2
+DOWN  add volume -2
+
+
+a cycle audio
+
 mbtn_right script-message-to osm show-menu main
